--- a/google.html
+++ b/google.html
@@ -8,51 +8,39 @@
 </head>
 
 <body>
-<div id="wrapper">
 
 	<div id="top">
 	    <ul>
 
 	    <div id="gmail">
-        <li> <a class="active" href="2"> Gmail</a> </li></div>
+        <li> <a class="active" href="#"> Gmail</a> </li></div>
 
         <div id="images">
-        <li> <a href="2"> Images </a> </li></div>
+        <li> <a href="#"> Images </a> </li></div>
 
         <div id="grid">
-        <li> <a href="2"> <img src="grid.jpg"> </a> </li></div>
+        <li> <a href="#"> <img src="grid.jpg"> </a> </li></div>
 
         <div id="sign">
-        <li> <a href="2"> Sign in </a> </li>
+        <li> <a href="#"> Sign in </a> </li>
         </div>
 
         </ul>
 	</div>
 
 
-    <div id="body">
+    <div id="main">
 
-	    <div id="logo">
-	    <img src="http://www.popsci.com/sites/popsci.com/files/styles/large_1x_/public/new-google-logo.jpg?itok=ZdIobGek"/>
-	    </div>
-
+	    <img id="logo" src="logo.png">
 	    <div id="canada">
-	    <p>Canada</p>
+			<p>Canada</p>
 	    </div>
 
-	    <div id="searchArea">
-	    <form>
-	    	
-	    	<input id="searchBox" type="text" name="search">
-	    	
-	    	<div class="bottom">
-	    	<input class="searchButtons" type="submit" value="Google Search">
-	    	<input class="searchButtons" type="submit" value="I'm Feeling Lucky">
-	    	</div>
-
-	    </form>
-	    </div>
-
+		<form action="" class="search">
+			<input type="text">
+			<button>Google Search</button>
+			<button>I'm feeling lucky</button>
+		</form> 
 
     </div>
 
@@ -60,5 +48,4 @@
     <div id ="bot">
     </div>
 
-</div>
 </body>
