added footer and final adjustments

--- a/google.html
+++ b/google.html
@@ -9,11 +9,11 @@
 
 <body>
 
-	<div id="top">
+	<div id="nav">
 	    <ul>
 
 	    <div id="gmail">
-        <li> <a class="active" href="#"> Gmail</a> </li></div>
+        <li> <a href="#"> Gmail</a> </li></div>
 
         <div id="images">
         <li> <a href="#"> Images </a> </li></div>
@@ -41,11 +41,26 @@
 			<button>Google Search</button>
 			<button>I'm feeling lucky</button>
 		</form> 
+		
+		<div id="french">
+		<p> Google.ca offered in: <a href="#"> Francais </a> </p>
+		</div>
 
     </div>
 
 
-    <div id ="bot">
-    </div>
+    <div id="footer">
+	    <ul class="left">
+        <li> <a href="#"> Advertising </a> </li>
+        <li> <a href="#"> Business </a> </li>
+		<li> <a href="#"> About </a> </li>
+		</ul>
+		
+		<ul class="right">
+        <li> <a href="#"> Privacy </a> </li>
+		<li> <a href="#"> Terms </a> </li>
+		<li> <a href="#"> Settings </a> </li>
+        </ul>
+	</div>
 
 </body>
